--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ img {
   padding-bottom: 2rem;
 }
 
-/* ===== LAYOUT ===== */
+/*===== LAYOUT =====*/
 .bd-grid {
   max-width: 1024px;
   display: grid;
@@ -129,7 +129,7 @@ img {
   font-weight: var(--font-semi);
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .nav__menu {
     position: fixed;
     top: var(--header-height);
@@ -190,19 +190,403 @@ img {
 .show {
   right: 0;
 }
+
+/*===== HOME =====*/
+.home {
+  position: relative;
+  row-gap: 5rem;
+  padding: 4rem 0 5rem;
+}
+
+.home__data {
+  align-self: center;
+}
+
+.home__title {
+  font-size: var(--big-font-size);
+  margin-bottom: var(--mb-5);
+}
+
+.home__title-color {
+  color: var(--first-color);
+}
+
+.home__social {
+  display: flex;
+  flex-direction: column;
+}
+
+.home__social-icon {
+  width: max-content;
+  margin-bottom: var(--mb-2);
+  font-size: 1.5rem;
+  color: var(--second-color);
+}
+
+.home__social-icon:hover {
+  color: var(--first-color);
+}
+
+.home__img {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 150px;
+  margin-bottom: 100px;
+  margin-right: -45px;
+}
+
+/* .home__blob {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 15px;
+  margin-bottom: 70px;
+  margin-left: 200px;
+
+} */
+
+.home__blob-img {
+  width: 405px;
+}
+
+/*BUTTONS*/
+.button_tool {
+  display: inline-block;
+  background-color: var(--first-color);
+  color: #fff;
+  padding: 0.4rem 0.75rem;
+  font-weight: var(--font-semi);
+  border-radius: 0.5rem;
+  transition: 0.3s;
+}
+
+.button {
+  display: inline-block;
+  background-color: var(--first-color);
+  color: #fff;
+  padding: 0.8rem 2.75rem;
+  font-weight: var(--font-semi);
+  border-radius: 0.5rem;
+  transition: 0.3s;
+}
+
+.button:hover {
+  box-shadow: 0px 10px 36px rgba(0, 0, 0, 0.15);
+}
+
+/* ===== ABOUT =====*/
+.about__container {
+  row-gap: 2rem;
+  text-align: center;
+}
+
+.about__subtitle {
+  margin-bottom: var(--mb-2);
+}
+
+.about__img {
+  justify-self: center;
+}
+
+.about__img img {
+  width: 100%;
+  height: 50%;
+  border-radius: 50%;
+}
+.about__details {
+  font-size: 12px;
+  display: block;
+  margin-right: 20px;
+  color: var(--first-color);
+  font-weight: 600;
+}
+
+/* ===== SKILLS =====*/
+.skills__container {
+  row-gap: 2rem;
+  text-align: center;
+}
+
+.skills__subtitle {
+  margin-bottom: var(--mb-2);
+}
+
+.skills__text {
+  margin-bottom: var(--mb-4);
+}
+
+.skills__data {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  font-weight: var(--font-semi);
+  padding: 0.5rem 1rem;
+  margin-bottom: var(--mb-4);
+  border-radius: 0.5rem;
+  box-shadow: 0px 4px 25px rgba(14, 36, 49, 0.15);
+}
+
+.skills__icon {
+  font-size: 2rem;
+  margin-right: var(--mb-2);
+  color: var(--first-color);
+}
+
+.skills__names {
+  display: flex;
+  align-items: center;
+}
+
+.skills__bar {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  background-color: var(--first-color);
+  height: 0.25rem;
+  border-radius: 0.5rem;
+  z-index: var(--z-back);
+}
+
+.skills__img {
+  border-radius: 0.5rem;
+}
+
+/* ===== WORK =====*/
+.work__container {
+  row-gap: 8rem;
+}
+
+.work__box {
+  box-shadow: 0px 4px 25px rgba(14, 36, 49, 0.15);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 8px;
+  border: 1px solid rgb(210, 210, 210);
+  border-radius: 10px;
+  padding: 8px;
+}
+
+.project-heading {
+  font-size: var(--h2-font-size);
+  font-weight: var(--h2-font-size);
+}
+
+.left_box_work,
+.right_box_work {
+  background-color: rgb(236, 236, 236);
+  border-radius: 10px;
+  border: 1px solid rgb(210, 210, 210);
+  box-shadow: 0px 4px 25px rgba(14, 36, 49, 0.15);
+  padding: 15px;
+}
+
+.left_box_work > a {
+  display: inline;
+  font-size: 11px;
+  font-weight: bold;
+  color: var(--first-color);
+  font-size: 15px;
+  margin-right: 10px;
+  display: inline-block;
+  margin-bottom: 10px;
+}
+
+.left_box_work {
+  width: 100%;
+  border-radius: 0px 0px 10px 10px;
+}
+
+.right_box_work {
+  width: 100%;
+  display: flex;
+  justify-content: content 100%;
+  align-items: center;
+  border-radius: 10px 10px 0px 0px;
+}
+
+.work__img {
+  box-shadow: 0px 4px 25px rgba(14, 36, 49, 0.15);
+  border-radius: 10px;
+  overflow: hidden;
+}
+.project-para {
+  font-size: 11px;
+  margin-bottom: 10px;
+}
+
+.work__img {
+  transition: 1s;
+  border-radius: 10px;
+}
+
+.work__img img:hover {
+  transform: scale(1.1);
+}
+
+/* ===== CONTACT =====*/
+.contact__input {
+  width: 100%;
+  font-size: var(--normal-font-size);
+  font-weight: var(--font-semi);
+  padding: 1rem;
+  border-radius: 0.5rem;
+  border: 1.5px solid var(--second-color);
+  outline: none;
+  margin-bottom: var(--mb-4);
+}
+
+.contact__button {
+  display: block;
+  border: none;
+  outline: none;
+  font-size: var(--normal-font-size);
+  cursor: pointer;
+  margin-left: auto;
+  color: white;
+}
+
+/* ===== FOOTER =====*/
+.footer {
+  background-color: var(--second-color);
+  color: #fff;
+  text-align: center;
+  font-weight: var(--font-semi);
+  padding: 2rem 0;
+}
+
+.footer__title {
+  font-size: 2rem;
+  margin-bottom: var(--mb-4);
+}
+
+.footer__social {
+  margin-bottom: var(--mb-4);
+}
+
+.footer__icon {
+  font-size: 1.5rem;
+  color: #fff;
+  margin: 0 var(--mb-2);
+}
+
+.footer__copy {
+  font-size: var(--smaller-font-size);
+}
+
 /* ===== MEDIA QUERIES=====*/
-
-
 @media screen and (max-width: 320px) {
+  .home {
+    row-gap: 2rem;
   }
-  @media screen and (min-width: 321px) {
+  .home__img {
+    width: 150px;
   }
-  
-  @media screen and (min-width: 479px) {
+}
+@media screen and (min-width: 321px) {
+  .home__img {
+    width: 200px;
+    display: block;
+    margin-right: 10px;
+    /* margin-bottom: -1px; */
   }
-  
-@media screen and (min-width: 768px) {
- 
+
+  .home__img img {
+    display: block;
+    margin-bottom: 2000px;
+  }
+}
+
+@media screen and (min-width: 479px) {
+  .home {
+    padding: 4rem 0 2rem;
+  }
+  .home__social {
+    padding-top: 0;
+    padding-bottom: 2.5rem;
+    flex-direction: row;
+    align-self: flex-end;
+  }
+  .home__social-icon {
+    margin-bottom: 0;
+    margin-right: var(--mb-4);
+  }
+  .home__img {
+    width: 300px;
+    bottom: 25%;
+  }
+  .about__container {
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    text-align: initial;
+  }
+  .skills__container {
+    grid-template-columns: 0.7fr;
+    justify-content: center;
+    column-gap: 1rem;
+  }
+  .work__container {
+    grid-template-columns: repeat(1, 1fr);
+    column-gap: 5rem;
+    padding-top: 2rem;
+  }
+  .contact__form {
+    width: 360px;
+    padding-top: 2rem;
+  }
+  .contact__container {
+    justify-items: center;
+  }
+
+  .right_box_work {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+  }
+
+  .project-para {
+    font-size: 16px;
+    margin-bottom: 10px;
+  }
+
+  .left_box_work > a {
+    display: inline-block;
+    font-size: 14px;
+    margin-bottom: 10px;
+    font-weight: bold;
+    color: var(--first-color);
+    margin-bottom: 20px;
+    font-size: 18px;
+  }
+  .button_tool {
+    display: inline-block;
+    background-color: var(--first-color);
+    color: #fff;
+    padding: 0.1rem 0.4rem;
+    font-weight: var(--font-semi);
+    border-radius: 0.5rem;
+    transition: 0.3s;
+  }
+}
+
+@media screen and (min-width: 767px) {
+  body {
+    margin: 0;
+  }
+  .section {
+    padding-top: 4rem;
+    padding-bottom: 3rem;
+  }
+  .section-title {
+    margin-bottom: var(--mb-6);
+  }
+  .section-title::after {
+    width: 80px;
+    top: 3rem;
+  }
   .nav {
     height: calc(var(--header-height) + 1.5rem);
   }
@@ -220,6 +604,34 @@ img {
   .nav__link {
     color: var(--second-color);
   }
+  .home {
+    padding: 8rem 0 2rem;
+  }
+  .home__img {
+    width: 400px;
+    bottom: 10%;
+  }
+  .about__container {
+    padding-top: 2rem;
+  }
+  .about__img img {
+    width: 300px;
+  }
+  .skills__container {
+    grid-template-columns: repeat(1, 1fr);
+    column-gap: 2rem;
+    align-items: center;
+    text-align: initial;
+  }
+  .work__container {
+    grid-template-columns: repeat(1, 1fr);
+    column-gap: 2rem;
+  }
+  .work_project_name {
+    width: 30%;
+    color: black;
+    margin-bottom: 10px;
+  }
 }
 
 @media screen and (min-width: 992px) {
@@ -230,5 +642,7 @@ img {
   .home {
     padding: 10rem 0 2rem;
   }
- 
+  .home__img {
+    width: 450px;
+  }
 }
