--- a/style.css
+++ b/style.css
@@ -358,7 +358,7 @@ img {
   row-gap: 8rem;
 }
 
-.work__box {
+.project-card {
   box-shadow: 0px 4px 25px rgba(14, 36, 49, 0.15);
   display: flex;
   flex-direction: column;
