nav bar home section try to fix

--- a/style.css
+++ b/style.css
@@ -193,7 +193,7 @@ img {
 
 /*===== HOME =====*/
 .home {
-  /* position: relative; */
+  position: relative;
   row-gap: 5rem;
   padding: 4rem 0 5rem;
 }
