--- a/style.css
+++ b/style.css
@@ -219,7 +219,7 @@ img {
 .home__social-icon {
   width: max-content;
   margin-bottom: var(--mb-2);
-  font-size: 1.5rem;
+  font-size: 2.0rem;
   color: var(--second-color);
 }
 
@@ -235,7 +235,11 @@ img {
   margin-bottom: 100px;
   margin-right: -45px;
 }
-
+#resume-button-2
+{
+  border:  none;
+  font-size: 1.0rem;
+}
 /* .home__blob {
   display: flex;
   justify-content: center;
