--- a/style.css
+++ b/style.css
@@ -193,7 +193,7 @@ img {
 
 /*===== HOME =====*/
 .home {
-  position: relative;
+  /* position: relative; */
   row-gap: 5rem;
   padding: 4rem 0 5rem;
 }
@@ -234,21 +234,12 @@ img {
   width: 150px;
   margin-bottom: 100px;
   margin-right: -45px;
-}
+} 
 #resume-button-2
 {
   border:  none;
   font-size: 1.0rem;
 }
-/* .home__blob {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 15px;
-  margin-bottom: 70px;
-  margin-left: 200px;
-
-} */
 
 .home__blob-img {
   width: 405px;
